// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> renders a H3 heading 1`] = `
.c0 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <h3
    class="c0"
  >
    Lorem Ipsum
  </h3>
</div>
`;

exports[`<Heading /> renders a striped shifted H4 heading 1`] = `
.c1 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
  margin-left: -2rem;
  padding-left: 2rem;
}

@media (max-width:600px) {
  .c0 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <h4
    class="c0"
  >
    <span
      class="c1"
    />
    Lorem Ipsum
  </h4>
</div>
`;
